nhejazi published a site update

--- a/references.html
+++ b/references.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>References | Causal Mediation Analysis: Modern Methods for Path Analysis</title>
+<title>References | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
     <div class="d-flex align-items-start justify-content-between">
       <h1>
-        <a href="index.html" title="">Causal Mediation Analysis: Modern Methods for Path Analysis</a>
+        <a href="index.html" title="">[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</a>
       </h1>
       <button class="btn btn-outline-primary d-lg-none ml-2 mt-1" type="button" data-toggle="collapse" data-target="#main-nav" aria-expanded="true" aria-controls="main-nav"><i class="fas fa-bars"></i><span class="sr-only">Show table of contents</span></button>
     </div>
@@ -31,7 +31,8 @@
 
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
-<li><a class="" href="index.html">About this workshop</a></li>
+<li><a class="" href="index.html">Welcome to SER!</a></li>
+<li><a class="" href="about-this-workshop.html">About this workshop</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="intro.html"><span class="header-section-number">2</span> The Roadmap for Statistical Learning</a></li>
 <li><a class="" href="natural.html"><span class="header-section-number">3</span> The Natural Direct and Indirect Effects</a></li>
@@ -49,6 +50,11 @@
 <h1>References<a class="anchor" aria-label="anchor" href="#references"><i class="fas fa-link"></i></a>
 </h1>
 
+<div id="refs" class="references">
+<div id="ref-textor2011dagitty">
+<p>Textor, Johannes, Juliane Hardt, and Sven Knüppel. 2011. “DAGitty: A Graphical Tool for Analyzing Causal Diagrams.” <em>Epidemiology</em> 22 (5): 745.</p>
+</div>
+</div>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="stochastic.html"><span class="header-section-number">5</span> The Stochastic Direct and Indirect Effects</a></div>
@@ -72,7 +78,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Causal Mediation Analysis: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on March 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: March 23, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
