--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="active" href="index.html">Welcome to SER!</a></li>
-<li><a class="" href="about-this-workshop.html">About this workshop</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="intro.html"><span class="header-section-number">2</span> The Roadmap for Statistical Learning</a></li>
 <li><a class="" href="natural.html"><span class="header-section-number">3</span> The Natural Direct and Indirect Effects</a></li>
@@ -51,14 +50,374 @@
 </h1>
 <p>This open source, reproducible vignette is for a half-day workshop on modern
 methods for <em>causal mediation analysis</em>, given at the <a href="">SER 2021 Meeting</a> on
-Monday, 24 May 2021.</p>
+Monday, 24 May 2021. While we encourage use of this <code>bookdown</code> site, for
+convenience, we have also made these workshop materials <a href="https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf">available in
+PDF</a>.</p>
+<div id="about" class="section level2">
+<h2>
+<span class="header-section-number">0.1</span> About this workshop<a class="anchor" aria-label="anchor" href="#about"><i class="fas fa-link"></i></a>
+</h2>
+<p>Causal mediation analysis can provide a mechanistic understanding of how an
+exposure impacts an outcome, a central goal in epidemiology and health sciences.
+However, rapid methodologic developments coupled with few formal courses
+presents challenges to implementation. Beginning with an overview of classical
+direct and indirect effects, this workshop will present recent advances that
+overcome limitations of previous methods, allowing for: (i) continuous
+exposures, (ii) multiple, non-independent mediators, and (iii) effects
+identifiable in the presence of intermediate confounders affected by exposure.
+Emphasis will be placed on flexible, stochastic and interventional direct and
+indirect effects, highlighting how these may be applied to answer substantive
+epidemiological questions from real-world studies. Multiply robust,
+nonparametric estimators of these causal effects, and free and open source <code>R</code>
+packages (<a href="https://github.com/nhejazi/medshift"><code>medshift</code></a> and
+<a href="https://github.com/nhejazi/medoutcon"><code>medoutcon</code></a>) for their application, will
+be introduced.</p>
+<p>To ensure translation to real-world data analysis, this workshop will
+incorporate hands-on <code>R</code> programming exercises to allow participants practice in
+implementing the statistical tools presented. It is recommended that
+participants have working knowledge of the basic notions of causal inference,
+including counterfactuals and identification (linking the causal effect to a
+parameter estimable from the observed data distribution). Familiarity with the
+<code>R</code> programming language is also recommended.</p>
+</div>
+<div id="schedule" class="section level2">
+<h2>
+<span class="header-section-number">0.2</span> Workshop schedule<a class="anchor" aria-label="anchor" href="#schedule"><i class="fas fa-link"></i></a>
+</h2>
+<ul>
+<li>10:00A-10:30A: introductions/mediation set up</li>
+<li>10:30A-11:00A: estimands and how to choose</li>
+<li>11:00A-11:30A: discussion: how to choose in real-world examples</li>
+<li>11:30A-12:00P: shift parameter introduction with application in lecture part</li>
+<li>12:00P-12:15P break/discussion</li>
+<li>12:15P-12:45P estimation for natural direct and indirect effects,
+interventional direct and indirect effects</li>
+<li>12:45P-01:15P: practice <code>R</code> code for estimation</li>
+<li>01:15P-01:30P: estimation for stochastic interventional direct and indirect
+effects</li>
+<li>01:30P-01:50P: practice: code for estimation</li>
+<li>01:50P-02:00P wrap up</li>
+</ul>
+<p><strong>NOTE: All times listed in Pacific Time.</strong></p>
+</div>
+<div id="about-the-instructors" class="section level2 unnumbered">
+<h2>About the instructors<a class="anchor" aria-label="anchor" href="#about-the-instructors"><i class="fas fa-link"></i></a>
+</h2>
+<div id="iván-díaz" class="section level3 unnumbered">
+<h3>Iván Díaz<a class="anchor" aria-label="anchor" href="#iv%C3%A1n-d%C3%ADaz"><i class="fas fa-link"></i></a>
+</h3>
+<p>My research focuses on the development of non-parametric statistical methods for
+causal inference from observational and randomized studies with complex
+datasets, using machine learning. This includes but is not limited to mediation
+analysis, methods for continuous exposures, longitudinal data including survival
+analysis, and efficiency guarantees with covariate adjustment in randomized
+trials. I am also interested in general semi-parametric theory, machine
+learning, and high-dimensional data.</p>
+</div>
+<div id="nima-hejazi" class="section level3 unnumbered">
+<h3>Nima Hejazi<a class="anchor" aria-label="anchor" href="#nima-hejazi"><i class="fas fa-link"></i></a>
+</h3>
+<p>I am a PhD candidate in biostatistics at UC Berkeley, working under the joint
+direction of Mark van der Laan and Alan Hubbard. My research interests fall at
+the intersection of causal inference and machine learning, drawing on ideas from
+non/semi-parametric estimation in large, flexible statistical models to develop
+efficient and robust statistical procedures for evaluating complex target
+estimands in observational and randomized studies. Particular areas of current
+emphasis include causal mediation/path analysis, outcome-dependent sampling
+designs, targeted loss-based estimation, and applications in vaccine efficacy
+trials. I am also passionate about statistical computing and open source
+software development for applied statistics.</p>
+</div>
+<div id="kara-rudolph" class="section level3 unnumbered">
+<h3>Kara Rudolph<a class="anchor" aria-label="anchor" href="#kara-rudolph"><i class="fas fa-link"></i></a>
+</h3>
+<p>I am an Assistant Professor of Epidemiology at Columbia University. My research
+interests are in developing and applying causal inference methods to understand
+social and contextual influences on mental health, substance use, and violence
+in disadvantaged, urban areas of the United States. My current work focuses on
+developing methods for transportability and mediation, and subsequently applying
+those methods to understand how aspects of the school and peer environments
+mediate relationships between neighborhood factors and adolescent drug use
+across populations. More generally, my work on generalizing/ transporting
+findings from study samples to target populations and identifying subpopulations
+most likely to benefit from interventions contributes to efforts to optimally
+target available policy and program resources.</p>
+<!--
+# Acknowledgements {-}
+-->
+</div>
+</div>
+<div id="repro" class="section level2">
+<h2>
+<span class="header-section-number">0.3</span> Reproduciblity<a class="anchor" aria-label="anchor" href="#repro"><i class="fas fa-link"></i></a>
+</h2>
+<p>These workshop materials were written using <a href="http://bookdown.org/">bookdown</a>,
+and the complete source is available on
+<a href="https://github.com/tlverse/tlverse-handbook">GitHub</a>. This version of the book
+was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pandoc</a> version <code>r rmarkdown::pandoc_version()</code>, and the following packages:</p>
+<div class="inline-table"><table class="table table-sm">
+<thead><tr class="header">
+<th align="left">package</th>
+<th align="left">version</th>
+<th align="left">source</th>
+</tr></thead>
+<tbody>
+<tr class="odd">
+<td align="left">bookdown</td>
+<td align="left">0.21.7</td>
+<td align="left">Github (rstudio/bookdown@b66380e)</td>
+</tr>
+<tr class="even">
+<td align="left">bslib</td>
+<td align="left">0.2.4.9002</td>
+<td align="left">Github (rstudio/bslib@b2b4e55)</td>
+</tr>
+<tr class="odd">
+<td align="left">dagitty</td>
+<td align="left">0.3-1</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">data.table</td>
+<td align="left">1.14.0</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">downlit</td>
+<td align="left">0.2.1</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">dplyr</td>
+<td align="left">1.0.5</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">ggdag</td>
+<td align="left">0.2.3</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">ggfortify</td>
+<td align="left">0.4.11</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">ggplot2</td>
+<td align="left">3.3.3</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">kableExtra</td>
+<td align="left">1.3.4</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">knitr</td>
+<td align="left">1.31</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">medoutcon</td>
+<td align="left">0.1.0</td>
+<td align="left">Github (nhejazi/medoutcon@f8f14c4)</td>
+</tr>
+<tr class="odd">
+<td align="left">medshift</td>
+<td align="left">0.1.4</td>
+<td align="left">Github (nhejazi/medshift@f9e11a9)</td>
+</tr>
+<tr class="even">
+<td align="left">mvtnorm</td>
+<td align="left">1.1-1</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">origami</td>
+<td align="left">1.0.3</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">readr</td>
+<td align="left">1.4.0</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">rmarkdown</td>
+<td align="left">2.7.4</td>
+<td align="left">Github (rstudio/rmarkdown@1450461)</td>
+</tr>
+<tr class="even">
+<td align="left">skimr</td>
+<td align="left">2.1.3</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">sl3</td>
+<td align="left">1.4.3</td>
+<td align="left">Github (tlverse/sl3@3950846)</td>
+</tr>
+<tr class="even">
+<td align="left">stringr</td>
+<td align="left">1.4.0</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="odd">
+<td align="left">tibble</td>
+<td align="left">3.1.0</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+<tr class="even">
+<td align="left">tidyr</td>
+<td align="left">1.1.3</td>
+<td align="left">CRAN (R 4.0.4)</td>
+</tr>
+</tbody>
+</table></div>
+</div>
+<div id="setup" class="section level2">
+<h2>
+<span class="header-section-number">0.4</span> Setup instructions<a class="anchor" aria-label="anchor" href="#setup"><i class="fas fa-link"></i></a>
+</h2>
+<div id="r-and-rstudio" class="section level3">
+<h3>
+<span class="header-section-number">0.4.1</span> R and RStudio<a class="anchor" aria-label="anchor" href="#r-and-rstudio"><i class="fas fa-link"></i></a>
+</h3>
+<p><strong>R</strong> and <strong>RStudio</strong> are separate downloads and installations. R is the
+underlying statistical computing environment. RStudio is a graphical integrated
+development environment (IDE) that makes using R much easier and more
+interactive. You need to install R before you install RStudio.</p>
+<div id="windows" class="section level4">
+<h4>
+<span class="header-section-number">0.4.1.1</span> Windows<a class="anchor" aria-label="anchor" href="#windows"><i class="fas fa-link"></i></a>
+</h4>
+<div id="if-you-already-have-r-and-rstudio-installed" class="section level5">
+<h5>
+<span class="header-section-number">0.4.1.1.1</span> If you already have R and RStudio installed<a class="anchor" aria-label="anchor" href="#if-you-already-have-r-and-rstudio-installed"><i class="fas fa-link"></i></a>
+</h5>
+<ul>
+<li>Open RStudio, and click on “Help” &gt; “Check for updates”. If a new version is
+available, quit RStudio, and download the latest version for RStudio.</li>
+<li>To check which version of R you are using, start RStudio and the first thing
+that appears in the console indicates the version of R you are
+running. Alternatively, you can type <code><a href="https://rdrr.io/r/utils/sessionInfo.html">sessionInfo()</a></code>, which will also display
+which version of R you are running. Go on the <a href="https://cran.r-project.org/bin/windows/base/">CRAN
+website</a> and check whether a
+more recent version is available. If so, please download and install it. You
+can <a href="https://cran.r-project.org/bin/windows/base/rw-FAQ.html#How-do-I-UNinstall-R_003f">check here</a>
+for more information on how to remove old versions from your system if you
+wish to do so.</li>
+</ul>
+</div>
+<div id="if-you-dont-have-r-and-rstudio-installed" class="section level5">
+<h5>
+<span class="header-section-number">0.4.1.1.2</span> If you don’t have R and RStudio installed<a class="anchor" aria-label="anchor" href="#if-you-dont-have-r-and-rstudio-installed"><i class="fas fa-link"></i></a>
+</h5>
+<ul>
+<li>Download R from
+the <a href="http://cran.r-project.org/bin/windows/base/release.htm">CRAN website</a>.</li>
+<li>Run the <code>.exe</code> file that was just downloaded</li>
+<li>Go to the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio download
+page</a>
+</li>
+<li>Under <em>Installers</em> select <strong>RStudio x.yy.zzz - Windows
+XP/Vista/7/8</strong> (where x, y, and z represent version numbers)</li>
+<li>Double click the file to install it</li>
+<li>Once it’s installed, open RStudio to make sure it works and you don’t get any
+error messages.</li>
+</ul>
+</div>
+</div>
+<div id="macos-mac-os-x" class="section level4">
+<h4>
+<span class="header-section-number">0.4.1.2</span> macOS / Mac OS X<a class="anchor" aria-label="anchor" href="#macos-mac-os-x"><i class="fas fa-link"></i></a>
+</h4>
+<div id="if-you-already-have-r-and-rstudio-installed-1" class="section level5">
+<h5>
+<span class="header-section-number">0.4.1.2.1</span> If you already have R and RStudio installed<a class="anchor" aria-label="anchor" href="#if-you-already-have-r-and-rstudio-installed-1"><i class="fas fa-link"></i></a>
+</h5>
+<ul>
+<li>Open RStudio, and click on “Help” &gt; “Check for updates”. If a new version is
+available, quit RStudio, and download the latest version for RStudio.</li>
+<li>To check the version of R you are using, start RStudio and the first thing
+that appears on the terminal indicates the version of R you are running.
+Alternatively, you can type <code><a href="https://rdrr.io/r/utils/sessionInfo.html">sessionInfo()</a></code>, which will also display which
+version of R you are running. Go on the <a href="https://cran.r-project.org/bin/macosx/">CRAN
+website</a> and check whether a more
+recent version is available. If so, please download and install it.</li>
+</ul>
+</div>
+<div id="if-you-dont-have-r-and-rstudio-installed-1" class="section level5">
+<h5>
+<span class="header-section-number">0.4.1.2.2</span> If you don’t have R and RStudio installed<a class="anchor" aria-label="anchor" href="#if-you-dont-have-r-and-rstudio-installed-1"><i class="fas fa-link"></i></a>
+</h5>
+<ul>
+<li>Download R from
+the <a href="http://cran.r-project.org/bin/macosx">CRAN website</a>.</li>
+<li>Select the <code>.pkg</code> file for the latest R version</li>
+<li>Double click on the downloaded file to install R</li>
+<li>It is also a good idea to install <a href="https://www.xquartz.org/">XQuartz</a> (needed
+by some packages)</li>
+<li>Go to the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio download
+page</a>
+</li>
+<li>Under <em>Installers</em> select <strong>RStudio x.yy.zzz - Mac OS X 10.6+ (64-bit)</strong>
+(where x, y, and z represent version numbers)</li>
+<li>Double click the file to install RStudio</li>
+<li>Once it’s installed, open RStudio to make sure it works and you don’t get any
+error messages.</li>
+</ul>
+</div>
+</div>
+<div id="linux" class="section level4">
+<h4>
+<span class="header-section-number">0.4.1.3</span> Linux<a class="anchor" aria-label="anchor" href="#linux"><i class="fas fa-link"></i></a>
+</h4>
+<ul>
+<li>Follow the instructions for your distribution
+from <a href="https://cloud.r-project.org/bin/linux">CRAN</a>, they provide information
+to get the most recent version of R for common distributions. For most
+distributions, you could use your package manager (e.g., for Debian/Ubuntu run
+<code>sudo apt-get install r-base</code>, and for Fedora <code>sudo yum install R</code>), but we
+don’t recommend this approach as the versions provided by this are
+usually out of date. In any case, make sure you have at least R 3.3.1.</li>
+<li>Go to the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio download
+page</a>
+</li>
+<li>Under <em>Installers</em> select the version that matches your distribution, and
+install it with your preferred method (e.g., with Debian/Ubuntu <code>sudo dpkg -i rstudio-x.yy.zzz-amd64.deb</code> at the terminal).</li>
+<li>Once it’s installed, open RStudio to make sure it works and you don’t get any
+error messages.</li>
+</ul>
+<p>These setup instructions are adapted from those written for <a href="http://www.datacarpentry.org/R-ecology-lesson/">Data Carpentry: R
+for Data Analysis and Visualization of Ecological
+Data</a>.</p>
+
+</div>
+</div>
+</div>
 </div>
   <div class="chapter-nav">
 <div class="empty"></div>
-<div class="next"><a href="about-this-workshop.html">About this workshop</a></div>
+<div class="next"><a href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#welcome-to-ser">Welcome to SER!</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#welcome-to-ser">Welcome to SER!</a></li>
+<li><a class="nav-link" href="#about"><span class="header-section-number">0.1</span> About this workshop</a></li>
+<li><a class="nav-link" href="#schedule"><span class="header-section-number">0.2</span> Workshop schedule</a></li>
+<li>
+<a class="nav-link" href="#about-the-instructors">About the instructors</a><ul class="nav navbar-nav">
+<li><a class="nav-link" href="#iv%C3%A1n-d%C3%ADaz">Iván Díaz</a></li>
+<li><a class="nav-link" href="#nima-hejazi">Nima Hejazi</a></li>
+<li><a class="nav-link" href="#kara-rudolph">Kara Rudolph</a></li>
+</ul>
+</li>
+<li><a class="nav-link" href="#repro"><span class="header-section-number">0.3</span> Reproduciblity</a></li>
+<li>
+<a class="nav-link" href="#setup"><span class="header-section-number">0.4</span> Setup instructions</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#r-and-rstudio"><span class="header-section-number">0.4.1</span> R and RStudio</a></li></ul>
+</li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
