--- a/mediation.html
+++ b/mediation.html
@@ -32,7 +32,6 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="" href="index.html">Welcome to SER!</a></li>
-<li><a class="" href="about-this-workshop.html">About this workshop</a></li>
 <li><a class="active" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="intro.html"><span class="header-section-number">2</span> The Roadmap for Statistical Learning</a></li>
 <li><a class="" href="natural.html"><span class="header-section-number">3</span> The Natural Direct and Indirect Effects</a></li>
@@ -54,7 +53,7 @@
 
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="about-this-workshop.html">About this workshop</a></div>
+<div class="prev"><a href="index.html">Welcome to SER!</a></div>
 <div class="next"><a href="intro.html"><span class="header-section-number">2</span> The Roadmap for Statistical Learning</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
