nhejazi published a site update

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="even">
 <td align="left">medoutcon</td>
-<td align="left">0.1.0</td>
-<td align="left">Github (nhejazi/medoutcon@f8f14c4)</td>
+<td align="left">NA</td>
+<td align="left">NA</td>
 </tr>
 <tr class="odd">
 <td align="left">medshift</td>
@@ -252,8 +252,8 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="odd">
 <td align="left">sl3</td>
-<td align="left">1.4.3</td>
-<td align="left">Github (tlverse/sl3@3950846)</td>
+<td align="left">1.4.2</td>
+<td align="left">Github (tlverse/sl3@a119d47)</td>
 </tr>
 <tr class="even">
 <td align="left">stringr</td>
@@ -432,7 +432,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: March 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: March 29, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
