--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
-<script src="libs/bootstrap-4.6.0/bootstrap.bundle.min.js"></script><script src="libs/bs3compat-0.2.4.9002/tabs.js"></script><script src="libs/bs3compat-0.2.4.9002/bs3compat.js"></script><link href="libs/bs4_book-1.0.0/bs4_book.css" rel="stylesheet">
+<script src="libs/bootstrap-4.6.0/bootstrap.bundle.min.js"></script><script src="libs/bs3compat-0.2.4.9003/tabs.js"></script><script src="libs/bs3compat-0.2.4.9003/bs3compat.js"></script><link href="libs/bs4_book-1.0.0/bs4_book.css" rel="stylesheet">
 <script src="libs/bs4_book-1.0.0/bs4_book.js"></script><script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 </head>
 <body>
@@ -174,13 +174,13 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 <tbody>
 <tr class="odd">
 <td align="left">bookdown</td>
-<td align="left">0.21.7</td>
-<td align="left">Github (rstudio/bookdown@b66380e)</td>
+<td align="left">0.21.11</td>
+<td align="left">Github (rstudio/bookdown@33c4f70)</td>
 </tr>
 <tr class="even">
 <td align="left">bslib</td>
-<td align="left">0.2.4.9002</td>
-<td align="left">Github (rstudio/bslib@b2b4e55)</td>
+<td align="left">0.2.4.9003</td>
+<td align="left">Github (rstudio/bslib@e09af88)</td>
 </tr>
 <tr class="odd">
 <td align="left">dagitty</td>
@@ -224,13 +224,13 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="odd">
 <td align="left">knitr</td>
-<td align="left">1.31</td>
+<td align="left">1.32</td>
 <td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">medoutcon</td>
-<td align="left">NA</td>
-<td align="left">NA</td>
+<td align="left">0.1.0</td>
+<td align="left">Github (nhejazi/medoutcon@f8f14c4)</td>
 </tr>
 <tr class="odd">
 <td align="left">medshift</td>
@@ -254,8 +254,8 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="odd">
 <td align="left">rmarkdown</td>
-<td align="left">2.7.4</td>
-<td align="left">Github (rstudio/rmarkdown@1450461)</td>
+<td align="left">2.7.11</td>
+<td align="left">Github (rstudio/rmarkdown@e340d75)</td>
 </tr>
 <tr class="even">
 <td align="left">skimr</td>
@@ -264,8 +264,8 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="odd">
 <td align="left">sl3</td>
-<td align="left">1.4.2</td>
-<td align="left">Github (tlverse/sl3@a119d47)</td>
+<td align="left">1.4.3</td>
+<td align="left">Github (tlverse/sl3@5cddc6c)</td>
 </tr>
 <tr class="even">
 <td align="left">stringr</td>
@@ -274,7 +274,7 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 </tr>
 <tr class="odd">
 <td align="left">tibble</td>
-<td align="left">3.1.0</td>
+<td align="left">3.1.1</td>
 <td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
@@ -444,7 +444,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 19, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 20, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
