--- a/references.html
+++ b/references.html
@@ -46,9 +46,11 @@
 <li><a class="" href="index.html">Welcome to SER!</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
-<li><a class="" href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
+<li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
 <li><a class="active" href="references.html">References</a></li>
 </ul>
 
@@ -63,7 +65,7 @@
 
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></div>
+<div class="prev"><a href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></div>
 <div class="empty"></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
@@ -84,7 +86,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
