--- a/estimandirl.html
+++ b/estimandirl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 3 How to choose an estimand: Real world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 4 How to choose an estimand: Real world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -46,9 +46,11 @@
 <li><a class="" href="index.html">Welcome to SER!</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="active" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
-<li><a class="" href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
+<li><a class="active" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -59,17 +61,17 @@
 </div>
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimandirl" class="section level1">
 <h1>
-<span class="header-section-number">3</span> How to choose an estimand: Real world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
+<span class="header-section-number">4</span> How to choose an estimand: Real world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
 </h1>
 <div id="comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud" class="section level2">
 <h2>
-<span class="header-section-number">3.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)<a class="anchor" aria-label="anchor" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><i class="fas fa-link"></i></a>
+<span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)<a class="anchor" aria-label="anchor" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><i class="fas fa-link"></i></a>
 </h2>
 <embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><p><em>Motivation</em>: Opposite overall treatment effects for homeless versus
 nonhomeless participants.</p>
 <embed src="/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/tmleesttotal.pdf" width="50%" style="display: block; margin: auto;" type="application/pdf"></embed><div id="getting-specific-about-the-question" class="section level3">
 <h3>
-<span class="header-section-number">3.1.1</span> Getting specific about the question<a class="anchor" aria-label="anchor" href="#getting-specific-about-the-question"><i class="fas fa-link"></i></a>
+<span class="header-section-number">4.1.1</span> Getting specific about the question<a class="anchor" aria-label="anchor" href="#getting-specific-about-the-question"><i class="fas fa-link"></i></a>
 </h3>
 <p>To what extent does the indirect effect through mediators of adherence, pain,
 and depressive symptoms explain the differences in treatment effects on OUD
@@ -103,21 +105,21 @@ relapse for homeless and nonhomeless individuals?</p>
 </div>
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></div>
-<div class="next"><a href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></div>
+<div class="prev"><a href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></div>
+<div class="next"><a href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
-<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
+<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li>
-<a class="nav-link" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><span class="header-section-number">3.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#getting-specific-about-the-question"><span class="header-section-number">3.1.1</span> Getting specific about the question</a></li></ul>
+<a class="nav-link" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#getting-specific-about-the-question"><span class="header-section-number">4.1.1</span> Getting specific about the question</a></li></ul>
 </li>
 </ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
-<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/03-natural.Rmd">View source <i class="fab fa-github"></i></a></li>
-          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/03-natural.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
+<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/03-how-to-choose.Rmd">View source <i class="fab fa-github"></i></a></li>
+          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/03-how-to-choose.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
         </ul>
 </div>
     </nav>
@@ -129,7 +131,7 @@ relapse for homeless and nonhomeless individuals?</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
