--- a/estimation-of-stochastic-indirect-effects.html
+++ b/estimation-of-stochastic-indirect-effects.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 1 Causal Mediation Analysis | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 7 Estimation of stochastic (in)direct effects | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -44,13 +44,13 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="" href="index.html">Welcome to SER!</a></li>
-<li><a class="active" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
+<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
 <li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
 <li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
 <li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
 <li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
-<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
+<li><a class="active" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -59,79 +59,24 @@
         </div>
       </nav>
 </div>
-  </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="mediation" class="section level1">
+  </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimation-of-stochastic-indirect-effects" class="section level1">
 <h1>
-<span class="header-section-number">1</span> Causal Mediation Analysis<a class="anchor" aria-label="anchor" href="#mediation"><i class="fas fa-link"></i></a>
+<span class="header-section-number">7</span> Estimation of stochastic (in)direct effects<a class="anchor" aria-label="anchor" href="#estimation-of-stochastic-indirect-effects"><i class="fas fa-link"></i></a>
 </h1>
-<div id="mediation-models" class="section level2">
-<h2>
-<span class="header-section-number">1.1</span> Mediation models<a class="anchor" aria-label="anchor" href="#mediation-models"><i class="fas fa-link"></i></a>
-</h2>
-<p>In this workshopp we will use directed acyclic graphs to conceptualize
-the effects of interest. We will focus on the two types of graph:</p>
-<div id="no-intermediate-confounders" class="section level3">
-<h3>
-<span class="header-section-number">1.1.1</span> No intermediate confounders<a class="anchor" aria-label="anchor" href="#no-intermediate-confounders"><i class="fas fa-link"></i></a>
-</h3>
-<div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-1"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
-</p>
-</div>
-</div>
-<div id="intermediate-confounders" class="section level3">
-<h3>
-<span class="header-section-number">1.1.2</span> Intermediate confounders<a class="anchor" aria-label="anchor" href="#intermediate-confounders"><i class="fas fa-link"></i></a>
-</h3>
-<div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-2"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.2: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
-</p>
-</div>
-</div>
-</div>
-<div id="counterfactuals" class="section level2">
-<h2>
-<span class="header-section-number">1.2</span> Counterfactuals<a class="anchor" aria-label="anchor" href="#counterfactuals"><i class="fas fa-link"></i></a>
-</h2>
-<p>In what follows, we will define all the effects of interest using
-<em>counterfactuals</em>. Counterfactuals are hypothetical random variables
-that would have been observed in a world where we would be able to
-perform interventions on the random variables of interest. For
-example, <span class="math inline">\(Y_a\)</span> is a counterfactual variable in a hypothetical world
-where <span class="math inline">\(\P(A=a)=1\)</span> with probability one. <span class="math inline">\(Y_{a,m}\)</span> is the
-counterfactual outcome in a world where <span class="math inline">\(\P(A=a,M=m)=1\)</span>, and <span class="math inline">\(M_a\)</span> is
-the counterfactual variable representing the mediator in a world where
-<span class="math inline">\(\P(A=a)=1\)</span>.</p>
-<p>In this workshop we use counterfactual variables as <em>primitives</em>, but
-we note that in other causal inference frameworks, such as structural
-equation models, counterfactuals are quantities <em>derived</em> from the
-model.</p>
+<p>[TO FILL IN]</p>
 
 </div>
-</div>
   <div class="chapter-nav">
-<div class="prev"><a href="index.html">Welcome to SER!</a></div>
-<div class="next"><a href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></div>
+<div class="prev"><a href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></div>
+<div class="next"><a href="references.html">References</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav">
-<li><a class="nav-link" href="#mediation"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
-<li>
-<a class="nav-link" href="#mediation-models"><span class="header-section-number">1.1</span> Mediation models</a><ul class="nav navbar-nav">
-<li><a class="nav-link" href="#no-intermediate-confounders"><span class="header-section-number">1.1.1</span> No intermediate confounders</a></li>
-<li><a class="nav-link" href="#intermediate-confounders"><span class="header-section-number">1.1.2</span> Intermediate confounders</a></li>
-</ul>
-</li>
-<li><a class="nav-link" href="#counterfactuals"><span class="header-section-number">1.2</span> Counterfactuals</a></li>
-</ul>
+      <ul class="nav navbar-nav"><li><a class="nav-link" href="#estimation-of-stochastic-indirect-effects"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li></ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
-<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/01-preface.Rmd">View source <i class="fab fa-github"></i></a></li>
-          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/01-preface.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
+<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/06-estimation-stochastic.Rmd">View source <i class="fab fa-github"></i></a></li>
+          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/06-estimation-stochastic.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
         </ul>
 </div>
     </nav>
