--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 <li><a class="active" href="index.html">Welcome to SER!</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
-<li><a class="" href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
+<li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -119,13 +121,15 @@ effects</li>
 <div id="iván-díaz" class="section level3 unnumbered">
 <h3>Iván Díaz<a class="anchor" aria-label="anchor" href="#iv%C3%A1n-d%C3%ADaz"><i class="fas fa-link"></i></a>
 </h3>
-<p>My research focuses on the development of non-parametric statistical methods for
-causal inference from observational and randomized studies with complex
-datasets, using machine learning. This includes but is not limited to mediation
-analysis, methods for continuous exposures, longitudinal data including survival
-analysis, and efficiency guarantees with covariate adjustment in randomized
-trials. I am also interested in general semi-parametric theory, machine
-learning, and high-dimensional data.</p>
+<p>I am an Assistant Professor at Weill Cornel Medicine. My research
+focuses on the development of non-parametric statistical methods for
+causal inference from observational and randomized studies with
+complex datasets, using machine learning. This includes but is not
+limited to mediation analysis, methods for continuous exposures,
+longitudinal data including survival analysis, and efficiency
+guarantees with covariate adjustment in randomized trials. I am also
+interested in general semi-parametric theory, machine learning, and
+high-dimensional data.</p>
 </div>
 <div id="nima-hejazi" class="section level3 unnumbered">
 <h3>Nima Hejazi<a class="anchor" aria-label="anchor" href="#nima-hejazi"><i class="fas fa-link"></i></a>
@@ -228,23 +232,33 @@ was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pando
 <td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
+<td align="left">magick</td>
+<td align="left">2.7.1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
 <td align="left">medoutcon</td>
 <td align="left">0.1.0</td>
 <td align="left">Github (nhejazi/medoutcon@f8f14c4)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">medshift</td>
 <td align="left">0.1.4</td>
 <td align="left">Github (nhejazi/medshift@f9e11a9)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">mvtnorm</td>
 <td align="left">1.1-1</td>
 <td align="left">CRAN (R 4.0.5)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">origami</td>
 <td align="left">1.0.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">pdftools</td>
+<td align="left">2.3.1</td>
 <td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
@@ -444,7 +458,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
