--- a/interventional.html
+++ b/interventional.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 4 The Interventional Direct and Indirect Effects | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 3 The Interventional Direct and Indirect Effects | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -46,9 +46,11 @@
 <li><a class="" href="index.html">Welcome to SER!</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
 <li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
-<li><a class="" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
-<li><a class="active" href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="active" href="interventional.html"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
+<li><a class="" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">6</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
+<li><a class="" href="estimation-of-stochastic-indirect-effects.html"><span class="header-section-number">7</span> Estimation of stochastic (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -59,22 +61,93 @@
 </div>
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="interventional" class="section level1">
 <h1>
-<span class="header-section-number">4</span> The Interventional Direct and Indirect Effects<a class="anchor" aria-label="anchor" href="#interventional"><i class="fas fa-link"></i></a>
+<span class="header-section-number">3</span> The Interventional Direct and Indirect Effects<a class="anchor" aria-label="anchor" href="#interventional"><i class="fas fa-link"></i></a>
 </h1>
+<div id="definition-of-the-effects" class="section level2">
+<h2>
+<span class="header-section-number">3.1</span> Definition of the effects<a class="anchor" aria-label="anchor" href="#definition-of-the-effects"><i class="fas fa-link"></i></a>
+</h2>
+<p>Consider the following directed acyclic graph.</p>
+<div class="figure" style="text-align: center">
+<span id="fig:unnamed-chunk-6"></span>
+<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 3.1: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
+</p>
+</div>
+<p>Here, <span class="math inline">\(A\)</span> is the treatment of interest, <span class="math inline">\(M\)</span> is the mediator of
+interest, <span class="math inline">\(W\)</span> is a pre-treatment variable containing confounders of
+<span class="math inline">\(A\)</span> on <span class="math inline">\(M\)</span> and <span class="math inline">\(Y\)</span>,and <span class="math inline">\(Z\)</span> is a post-treatment variable contaning
+confounders of the mediator and the exposure which are affected by
+treatment.</p>
+<div id="example" class="section level3">
+<h3>
+<span class="header-section-number">3.1.1</span> Example<a class="anchor" aria-label="anchor" href="#example"><i class="fas fa-link"></i></a>
+</h3>
 <p>[TO FILL IN]</p>
-
+</div>
+<div id="unidentifiability-of-the-nde-and-nie-in-this-setting" class="section level3">
+<h3>
+<span class="header-section-number">3.1.2</span> Unidentifiability of the NDE and NIE in this setting<a class="anchor" aria-label="anchor" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><i class="fas fa-link"></i></a>
+</h3>
+<p>In this example, natural direct and indirect effects are
+unidentifiable from observed data on <span class="math inline">\((W,A,Z,M,Y)\)</span>. The technical
+reason for this is that the cross-world counterfactual assumption</p>
+<p><span class="math display">\[Y(1,m)\indep M(0)\mid W\]</span></p>
+<p>does not hold in the aboce directed acyiclic graph. Intuitively, the
+reason for this is that an intervention setting <span class="math inline">\(A=1\)</span> (necessary for
+the definition of <span class="math inline">\(Y(1,m)\)</span>) induces a counterfactual variable
+<span class="math inline">\(Z(1)\)</span>. Likewise, an intervention setting <span class="math inline">\(A=0\)</span> (necessary for the
+definition of <span class="math inline">\(M(0)\)</span>) induces a counterfactual <span class="math inline">\(Z(0)\)</span>. The variables
+<span class="math inline">\(Z(1)\)</span> and <span class="math inline">\(Z(0)\)</span> are correlated because they share unmeasured common
+causes. The variable <span class="math inline">\(Z(1)\)</span> is correlated with <span class="math inline">\(Y(1,m)\)</span>, and the
+variable <span class="math inline">\(Z(0)\)</span> is correlated with <span class="math inline">\(M(0)\)</span>, because they are
+counterfactual outcomes in the same hypothetical worlds. Thus, to
+achieve <span class="math inline">\(Y(1,m)\)</span> independent of <span class="math inline">\(M(0)\)</span>, it would be necessary to
+adjust for either <span class="math inline">\(Z(1)\)</span> or <span class="math inline">\(Z(0)\)</span>. This is impossible to do since
+these variables are unmeasured.</p>
+</div>
+<div id="recovering-direct-and-indirect-effects" class="section level3">
+<h3>
+<span class="header-section-number">3.1.3</span> Recovering direct and indirect effects<a class="anchor" aria-label="anchor" href="#recovering-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
+</h3>
+<p>Even though estimation of the NDE and NIE is not possible in the
+presence of confounders of the mediation-outcome relation affected by
+treatment, it is possible to redefine the effects in a way such that
+they are identifiable. Specifically:</p>
+<ul>
+<li>Let <span class="math inline">\(G(a)\)</span> denote a random draw from the distribution of <span class="math inline">\(M(a) \mid W\)</span>
+</li>
+<li>Define the counterfactual <span class="math inline">\(Y(1,G(0))\)</span> as the counterfactual
+variable in a hypothetical world where <span class="math inline">\(A\)</span> is set <span class="math inline">\(A=1\)</span> and <span class="math inline">\(M\)</span> is
+set to <span class="math inline">\(M=G(0)\)</span> with porbability one.</li>
+<li>Define <span class="math inline">\(Y(0,G(0))\)</span> and <span class="math inline">\(Y(1,G(1))\)</span> similarly</li>
+<li>Then we can define:
+<span class="math display">\[\E[Y(1,G(1)) - Y(0,G(0))]=\underbrace{\E[Y(1,G(1))-Y(1,G(0))]}_{\text{interventional indirect effect}}+\underbrace{\E[Y(1,G(0))-Y(0,G(0))]}_{\text{interventional direct effect}}\]</span>
+</li>
+</ul>
+</div>
+</div>
 </div>
   <div class="chapter-nav">
-<div class="prev"><a href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></div>
-<div class="next"><a href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></div>
+<div class="prev"><a href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></div>
+<div class="next"><a href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#interventional"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#interventional"><span class="header-section-number">3</span> The Interventional Direct and Indirect Effects</a></li>
+<li>
+<a class="nav-link" href="#definition-of-the-effects"><span class="header-section-number">3.1</span> Definition of the effects</a><ul class="nav navbar-nav">
+<li><a class="nav-link" href="#example"><span class="header-section-number">3.1.1</span> Example</a></li>
+<li><a class="nav-link" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><span class="header-section-number">3.1.2</span> Unidentifiability of the NDE and NIE in this setting</a></li>
+<li><a class="nav-link" href="#recovering-direct-and-indirect-effects"><span class="header-section-number">3.1.3</span> Recovering direct and indirect effects</a></li>
+</ul>
+</li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
-<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/04-interventional.Rmd">View source <i class="fab fa-github"></i></a></li>
-          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/04-interventional.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
+<li><a id="book-source" href="https://github.com/nhejazi/ser2021_mediation_workshop/blob/master/02-effects-def.Rmd">View source <i class="fab fa-github"></i></a></li>
+          <li><a id="book-edit" href="https://github.com/nhejazi/ser2021_mediation_workshop/edit/master/02-effects-def.Rmd">Edit this page <i class="fab fa-github"></i></a></li>
         </ul>
 </div>
     </nav>
@@ -86,7 +159,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 23, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 26, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
